--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1,16 +1,3 @@
 body{
-    background:;
-} 
-img{
-    border-radius: 175px;
-    height: 250px;
-    width: 250px;
-    float: left;
-    margin-right: 10px;
-}
-.card-img-top{
-    
-}
-.card{
-    border: none;
+    background: #BDBDBD;
 }
