--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -13,23 +13,23 @@
         <div >
             <nav class="navbar navbar-expand-lg bg-body-tertiary navbar bg-dark" data-bs-theme="dark">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Start bootstrap</a>
+                  <a class="navbar-brand text-secondary" href="#">Start bootstrap</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
+                  <div class="collapse navbar-collapse " id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">About</a>
+                        <a class="nav-link active text-secondary" aria-current="page" href="#">About</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="#">Services</a>
+                        <a class="nav-link active text-secondary" href="#">Services</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="#">Portfolio</a>
+                        <a class="nav-link active text-secondary" href="#">Portfolio</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active">Contact</a>
+                        <a class="nav-link active text-secondary">Contact</a>
                       </li>
                     </ul>
                   </div>
