portfolio casi terminado

--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -10,9 +10,9 @@
     
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <img src="https://p4.wallpaperbetter.com/wallpaper/661/904/875/keyboard-fingers-hand-girl-wallpaper-preview.jpg" alt="manos escribiendo">
-        <h2>The Second Header Is Pretty Cool Too.</h2>
+        <h2>The Second Header <em>Is Pretty Cool Too.</em></h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum tempore sequi obcaecati veniam ratione iure accusantium eligendi eos sed accusamus, vitae officiis alias saepe sapiente earum rem inventore ea libero!</p>
         
     </div>
