--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1,6 +1,3 @@
-body{
-    background:;
-} 
 img{
     border-radius: 175px;
     height: 250px;
@@ -8,9 +5,18 @@ img{
     float: left;
     margin-right: 10px;
 }
-.card-img-top{
+ em{
+    color:gray;
+ }
+ .container{
+    margin: auto;
+    height: 400px;
     
-}
-.card{
-    border: none;
-}
+
+ }
+ .col{
+    border: 0px;
+ }
+ .card-text{
+    font-size: 12px;
+ }
