--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,36 @@
-<!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    <title>Document</title>
+</head>
+<body>
+    <div class="container-fluid" style="margin-bottom: 100px;">
+       <div style="margin-bottom: 50px;">
+        <h1>Contact</h1>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem itaque commodi nobis dolore ex dicta architecto, doloribus incidunt explicabo hic minus accusantium, voluptate odio magnam deserunt aliquid atque voluptas nostrum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eos fuga est ratione similique? Ut possimus aut dolorum ipsum atque a, sit blanditiis repellendus ex eum cumque earum velit expedita.
+       </div>
+       <div class= "container text-bg-light p-3" style="padding-left: 50px; padding-right: 200px; border-radius: 10px;">
+        <div class="row justify-content-md-end" style="margin-bottom: 15px;">
+            <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg"><strong>Your E-Mail</strong></label>
+            <div class="col-sm-8">
+              <input type="email" class="form-control form-control-lg" id="colFormLabelLg" placeholder="Your E-Mail">
+            </div>
+          </div>
+            <div class="mb-3 row justify-content-md-end">
+                <label for="textarea" class="col-sm-2 col-form-label col-form-label-lg"><strong>Your Message</strong></label>
+                <div class="col-sm-8">
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Please enter your message here..."></textarea>
+                </div>
+              </div>
+              <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary btn-lg" type="button">Submit</button>
+              </div>
+       </div>
+    </div>
+</body>
+</html>
